some more spacing on top, to avoid voting when clicking the stats icon

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -31,6 +31,7 @@ main {
 }
 
 .image-container {
+    margin-top: 35px;
     position: relative;
     width: 100%;
     height: 90%;
